--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "devise-axios": "^1.0.24",
-    "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-materialize": "^3.10.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
